--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </header>
       <aside class="lado-direito">
         <p>Quando começo a fazer os exercícios gosto que sempre fique caprichado
-          no CSS, faço varios testes formatações diferentes pra tentar evoluir, é quando
+          no CSS, faço vários testes formatações diferentes pra tentar evoluir, é quando
           olho para o relógio, se passa varias horas hahaha!
         </p>
       </aside>
